--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 body {
   font-family: 'Playfair Display', serif;
 
-  overflow:hidden;
+  /* overflow:hidden; */
   background-color: #000;
   color:white;
 }
